# ochra

./: pyproject.toml
docs/source/: index.rst  installation.rst  usage.rst
docs/source/api/discovery/: discovery.rst  equipment.rst  spaces.rst  storage.rst  utils.rst
docs/source/api/manager/: manager.rst
docs/source/api/manager/lab/: lab.rst
docs/source/api/manager/proxy_models/: proxy_models.rst
docs/source/api/manager/station/: station.rst
ochra/common/base/: data_model.py
ochra/common/connections/: api_models.py  rest_adapter.py
ochra/common/equipment/: device.py  operation.py
ochra/common/spaces/: station.py
ochra/common/utils/: mixins.py
ochra/manager/proxy_models/space/: station.py
ochra/manager/station/: station_server.py
