[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ochra"
version = "0.0.1" #can switch to dynamic versioning and take from git tag later
authors = [ #add authors here
    #{name = "placeholder", email = "place@holder"},
] 
description = "OChRA package..." #add summary of OChRA here
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.11"
dependencies = [
    "mongoengine==0.28.2",
    "pymongo==4.8.0",
    "pytest<=8.4.2",
    "pydantic>=2.11.1",
    "ruff>=0.7.2",
    "Requests<=2.34.2",
    "typing_extensions<=4.15.0",
    "Jinja2==3.1.5",
] 
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    #"License :: OSI Approved :: [LICENSE]",
    "Programming Language :: Python",
    ]

[project.optional-dependencies]
manager = [
    "fastapi==0.111.1",
    "uvicorn==0.30.1",
    "sqlalchemy",
]
documentation = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "autodoc_pydantic==2.2.0",
    "fastapi==0.111.1",
    "uvicorn==0.30.1",
    "sqlalchemy",
]

keywords = ["OChRA", "chemistry", "lab", "framework", "automated"]

[project.urls]
Repository = "https://github.com/OChRA-lab/ochra"

[tool.hatch.build.targets.wheel]
packages = ["ochra"]